# person-viewer

./: CMakeLists.txt  PersonViewer.kdev4  abstract-person-details-widget.cpp  abstract-person-details-widget.h  abstractpersondetailswidget.cpp  abstractpersondetailswidget.h  email-details-widget.cpp  email-details-widget.h  facebook-connector.cpp  facebook-connector.h  filter-bar.cpp  im-details-widget.cpp  im-details-widget.h  main-window.cpp  main-window.h  main-window.ui  main.cpp  person-details-view.cpp  person-details-view.h  person-details-view.ui  persons-delegate.cpp  persons-delegate.h  persons-list-view.cpp  persons-list-view.h  persons-model.cpp  persons-model.h  persons-proxy-model.cpp  persons-proxy-model.h  personviewer.desktop  phone-details-widget.cpp  phone-details-widget.h  photo-overlay-buttons.cpp  photo-overlay-buttons.h  photo-overlay-event-filter.cpp  photo-overlay-event-filter.h  recent-emails-details-widget.cpp  recent-emails-details-widget.h
pixmaps/: CMakeLists.txt
